[tool.poetry]
name = "huggingface-transformer"
version = "0.1.0"
description = "Generate summary of a document using starcoder model from HuggingFace"
authors = ["Sumit Sahoo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
transformers = "^4.29.2"
textract = "^1.6.5"
torch = "^2.0.1"
accelerate = "^0.19.0"
tensorflow = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
